--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "@inquirer/prompts": "^7.9.0",
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
-    "ora": "^9.0.0"
-  },
-  "devDependencies": {
+    "ora": "^9.0.0",
     "@types/node": "^24.9.1",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.3",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
     "vitest": "^4.0.3"
   }
 }
